# MangaMerger

./: .gitignore  CMakeLists.txt  ConvertAll.sh  README.md  imagecompressor.cpp  imagecompressor.h  main.cpp  mangamerger.cpp  mangamerger.h  threadpool.cpp  threadpool.h
libs/: CImg.h
